Working with spinner

--- a/src/app/components/logins/login/login.component.html
+++ b/src/app/components/logins/login/login.component.html
@@ -1,3 +1,4 @@
+
 <div class="unix-login" *ngIf="user">
     <div class="container-fluid">
         <div class="row justify-content-center">
@@ -31,3 +32,15 @@
         </div>
     </div>
 </div>
+
+
+<mat-spinner></mat-spinner>
+<mat-spinner></mat-spinner>
+<mat-spinner></mat-spinner>
+<mat-spinner></mat-spinner>
+<mat-spinner></mat-spinner>
+<mat-spinner></mat-spinner>
+<mat-spinner></mat-spinner>
+<mat-spinner></mat-spinner>
+<mat-spinner></mat-spinner>
+<mat-progress-spinner mode="indeterminate"> </mat-progress-spinner>
