--- a/src/app/components/daily-schedule/daily-schedule.component.html
+++ b/src/app/components/daily-schedule/daily-schedule.component.html
@@ -1,1 +1,1 @@
-<mbsc-eventcalendar [data]="events" [options]="eventSettings"></mbsc-eventcalendar>
+<mbsc-eventcalendar [data]="labelDays" [options]="eventSettings"></mbsc-eventcalendar>
