Dealing with Classes info

--- a/src/app/components/mains/main/main.component.html
+++ b/src/app/components/mains/main/main.component.html
@@ -9,13 +9,13 @@
           <ul id="sidebarnav">
               <li class="nav-devider"></li>
               <li class="nav-label">Home</li>
-              <li class="nav-item"> <a class="has-arrow  " routerLink="/dashboard" aria-expanded="false"><i class="fa fa-tachometer"></i><span class="hide-menu">Dashboard</span></a>
+              <li class="nav-item"> <a class="has-arrow  " [routerLink]="[ '/main', { outlets: { content: 'dashboard' } }]" aria-expanded="false"><i class="fa fa-tachometer"></i><span class="hide-menu">Dashboard</span></a>
               </li>
               <li class="nav-label">Courses</li>
               <li> <a class="has-arrow  " href aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Courses</span></a>
                   <ul aria-expanded="false" class="collapse">
                     <div *ngFor="let c of courses">
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'course' } }]" [queryParams]="{ course: c }" >{{c.course_name}}</a></li>
+                      <li><a [routerLink]="[ '/main', { outlets: { content: 'course' } }]" [queryParams]="{ course: c }" >{{c.name}}</a></li>
                     </div>
                       <!--<li><a href="layout-blank.html">Cálculo I</a></li>-->
                       <!--<li><a href="layout-boxed.html">Física</a></li>-->
