--- a/src/app/components/individual-course/individual-course.component.html
+++ b/src/app/components/individual-course/individual-course.component.html
@@ -5,14 +5,19 @@
             <mbsc-card-title>{{course.name}}</mbsc-card-title>
             <mbsc-card-subtitle>{{course.codification}} - {{course.section}}</mbsc-card-subtitle>
         </mbsc-card-header>
-        <mbsc-card-footer>Progress Bar or something with numbers and colors</mbsc-card-footer>
+        <mbsc-card-footer>Progress Bar</mbsc-card-footer>
+       <p class="m-t-30 f-w-600"><span class="pull-right">90%</span></p>
+      <div class="progress">
+        <div role="progressbar" style="width: 90%; height:8px;" class="progress-bar bg-info wow animated progress-animated"> <span class="sr-only">60% Complete</span> </div>
+      </div>
+
     </mbsc-card>
   </div>
 
   <div >
     <mbsc-card [options]="settings">
         <mbsc-card-content>
-            <mbsc-card-title>Grades</mbsc-card-title>
+            <mbsc-card-title>Grades: _-_-_-_</mbsc-card-title>
         </mbsc-card-content>
     </mbsc-card>
   </div>
