--- a/src/app/components/individual-course/individual-course.component.html
+++ b/src/app/components/individual-course/individual-course.component.html
@@ -3,7 +3,7 @@
     <mbsc-card [options]="settings">
         <mbsc-card-header>
             <mbsc-card-title>{{course.name}}</mbsc-card-title>
-            <mbsc-card-subtitle>{{course.codification}} - {{course.section}}</mbsc-card-subtitle>
+            <mbsc-card-subtitle>Codification-Section</mbsc-card-subtitle>
         </mbsc-card-header>
         <mbsc-card-footer>Progress Bar</mbsc-card-footer>
        <p class="m-t-30 f-w-600"><span class="pull-right">90%</span></p>
