--- a/src/app/components/mains/psychologistmain/psychologistmain.component.html
+++ b/src/app/components/mains/psychologistmain/psychologistmain.component.html
@@ -8,27 +8,37 @@
           <ul id="sidebarnav">
               <li class="nav-devider"></li>
               <li class="nav-label">Home</li>
-              <li class="nav-item"> <a class="has-arrow  " [routerLink]="[ '/main', { outlets: { content: 'dashboard' } }]"
-                                       aria-expanded="false"><i class="fa fa-tachometer"></i><span class="hide-menu">Dashboard</span></a>
-              </li>
-              <li class="nav-label">Courses</li>
-              <li> <a class="has-arrow  " href="#" aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Courses</span></a>
-                  <ul aria-expanded="false" class="collapse">
-                    <div *ngFor="let c of courses">
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.codification }" >{{c.course_name}}</a></li>
-                    </div>
-                  </ul>
-              </li>
-              <li class="nav-label">Schedule</li>
-              <li> <a class="has-arrow  " href aria-expanded="false"><i class="fa fa-envelope"></i><span class="hide-menu">Schedule</span></a>
-                  <ul aria-expanded="false" class="collapse">
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'today' } }]">Today</a></li>
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'today' } }]">Tomorrow</a></li>
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'this-week' } }]">This Week</a></li>
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'this-week' } }]">Next Week</a></li>
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'calendar' } }]">Calendar</a></li>
-                  </ul>
-              </li>
+
+              <li class="nav-item"> <a class="has-arrow  " [routerLink]="[ '/psychologistmain']"
+                                       <aria-expanded="false"><i class="fa fa-tachometer"></i><span class="hide-menu">Dashboard</span></a>
+             </li>
+            <div class = "Students list">
+                <div *ngIf="!((students$ | async )?.length)">
+                  No students found.
+                </div>
+                <div
+                  *ngFor="Let (students$ | async)"
+                              [psychologist] = "students$">
+                </div>
+              </div>
+              <!--<li class="nav-label">Courses</li>-->
+              <!--<li> <a class="has-arrow  " href="#" aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Courses</span></a>-->
+                  <!--<ul aria-expanded="false" class="collapse">-->
+                    <!--<div *ngFor="let c of courses">-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.codification }" >{{c.course_name}}</a></li>-->
+                    <!--</div>-->
+                  <!--</ul>-->
+              <!--</li>-->
+              <!--<li class="nav-label">Schedule</li>-->
+              <!--<li> <a class="has-arrow  " href aria-expanded="false"><i class="fa fa-envelope"></i><span class="hide-menu">Schedule</span></a>-->
+                  <!--<ul aria-expanded="false" class="collapse">-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'today' } }]">Today</a></li>-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'today' } }]">Tomorrow</a></li>-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'this-week' } }]">This Week</a></li>-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'this-week' } }]">Next Week</a></li>-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'calendar' } }]">Calendar</a></li>-->
+                  <!--</ul>-->
+              <!--</li>-->
           </ul>
 
       </nav>
