--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <router-outlet></router-outlet>
 <!--<app-mentormain></app-mentormain>-->
+<!--<app-chat></app-chat>-->
+<!--<app-appointment-form></app-appointment-form>-->
