--- a/src/app/components/mentors/mentors.component.html
+++ b/src/app/components/mentors/mentors.component.html
@@ -1,24 +1,45 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Anfitriones</mat-card-title>
-    <mat-card-subtitle>Los anfitriones te pueden ofrecer ayuda relacionada al uso de la aplicacion</mat-card-subtitle>
+<div class="row">
+  <div class="col-sm-4">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Anfitriones</mat-card-title>
+        <mat-card-subtitle>Los anfitriones te pueden ofrecer ayuda relacionada al uso de la aplicacion</mat-card-subtitle>
+      </mat-card-header>
+      <mat-divider></mat-divider>
+      <mat-card-actions>
+        <button mat-button>Contactar</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 
-  </mat-card-header>
-</mat-card>
+    <div class="col-sm-4">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Consejeria</mat-card-title>
+        <mat-card-subtitle>Los consejeros te pueden ayudar con el manejo de tiempo, traslados internos y externos...</mat-card-subtitle>
+      </mat-card-header>
+      <mat-divider></mat-divider>
 
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Consejeria</mat-card-title>
-    <mat-card-subtitle>Los consejeros te pueden ayudar con el manejo de tiempo, traslados internos y externos...</mat-card-subtitle>
-    <mat-card-actions>
-      <button>Sacar cita</button>
-    </mat-card-actions>
-  </mat-card-header>
-</mat-card>
+        <mat-card-actions>
+          <button mat-button><a [routerLink]="[ '/studentmain', { outlets: { content: 'counselor-form' } }]">Sacar cita</a></button>
+          <button mat-button>Contactar</button>
+        </mat-card-actions>
 
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Psicologia</mat-card-title>
-    <mat-card-subtitle>Los psicologos...</mat-card-subtitle>
-  </mat-card-header>
-</mat-card>
+    </mat-card>
+    </div>
+
+  <div class="col-sm-4">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Psicologia</mat-card-title>
+        <mat-card-subtitle>Los psicologos...</mat-card-subtitle>
+      </mat-card-header>
+      <mat-divider></mat-divider>
+
+        <mat-card-actions>
+          <button mat-button><a [routerLink]="[ '/studentmain', { outlets: { content: 'psychologist-form' } }]">Sacar cita</a></button>
+          <button mat-button>Contactar</button>
+        </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
