--- a/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
+++ b/src/app/components/sharedComponents/topnavbar/topnavbar.component.html
@@ -26,7 +26,7 @@
         <!-- Messages -->
         <li><app-messages-menu></app-messages-menu></li>
         <!-- Notifications -->
-        <app-notifications></app-notifications>
+        <li><app-notifications></app-notifications></li>
         <!-- Profile -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-muted  " href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.username}}&nbsp;&nbsp;<img src="images/users/5.jpg" alt="user" class="profile-pic" /></a>
