--- a/src/app/components/mains/mentormain/mentormain.component.html
+++ b/src/app/components/mains/mentormain/mentormain.component.html
@@ -15,7 +15,7 @@
               <!--<li> <a class="has-arrow  " href="#" aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Courses</span></a>-->
                   <!--<ul aria-expanded="false" class="collapse">-->
                     <!--<div *ngFor="let c of courses">-->
-                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.codification }" >{{c.course_name}}</a></li>-->
+                      <!--<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.codification }" >{{c.course_name}}</a></li>-->
                     <!--</div>-->
                   <!--</ul>-->
               <!--</li>-->
@@ -41,12 +41,10 @@
 <!-- Page wrapper  -->
 <div class="page-wrapper">
 
-  <app-breadcrumb></app-breadcrumb>
-
     <!-- Container fluid  -->
     <div class="container-fluid">
 
-      <app-student-list></app-student-list>
+      <!--<app-student-list></app-student-list>-->
       <router-outlet name="content"></router-outlet>
 
     </div>
