--- a/src/app/components/sharedComponents/messages/messages-menu.component.html
+++ b/src/app/components/sharedComponents/messages/messages-menu.component.html
@@ -1,47 +1,61 @@
-<li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-muted text-muted  " href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-bell"></i>
-                <div class="notify"> <span class="heartbit"></span> <span class="point"></span> </div>
-              </a>
-                    <div class="dropdown-menu dropdown-menu-right mailbox animated zoomIn">
-                        <ul>
-                            <li>
-                                <div class="drop-title">Notifications</div>
-                            </li>
-                            <li>
-                                <div class="message-center">
-                                    <!-- Message -->
-                                    <a href="#">
-                                        <div class="btn btn-danger btn-circle m-r-10"><i class="fa fa-link"></i></div>
-                                        <div class="mail-contnet">
-                                            <h5>This is title</h5> <span class="mail-desc">Just see the my new admin!</span> <span class="time">9:30 AM</span>
-                                        </div>
-                                    </a>
-                                    <!-- Message -->
-                                    <a href="#">
-                                        <div class="btn btn-success btn-circle m-r-10"><i class="ti-calendar"></i></div>
-                                        <div class="mail-contnet">
-                                            <h5>This is another title</h5> <span class="mail-desc">Just a reminder that you have event</span> <span class="time">9:10 AM</span>
-                                        </div>
-                                    </a>
-                                    <!-- Message -->
-                                    <a href="#">
-                                        <div class="btn btn-info btn-circle m-r-10"><i class="ti-settings"></i></div>
-                                        <div class="mail-contnet">
-                                            <h5>This is title</h5> <span class="mail-desc">You can customize this template as you want</span> <span class="time">9:08 AM</span>
-                                        </div>
-                                    </a>
-                                    <!-- Message -->
-                                    <a href="#">
-                                        <div class="btn btn-primary btn-circle m-r-10"><i class="ti-user"></i></div>
-                                        <div class="mail-contnet">
-                                            <h5>This is another title</h5> <span class="mail-desc">Just see the my admin!</span> <span class="time">9:02 AM</span>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-                            <li>
-                                <a class="nav-link text-center" href="javascript:void(0);"> <strong>Check all notifications</strong> <i class="fa fa-angle-right"></i> </a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
+<!-- Messages -->
+<div class="navbar-nav my-lg-0 nav-item dropdown">
+  <a class="nav-link dropdown-toggle text-muted  " href="#" id="2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-envelope"></i>
+    <!--<div class="notify"> <span class="heartbit"></span> <span class="point"></span> </div>-->
+  </a>
+  <div class="dropdown-menu dropdown-menu-right mailbox animated zoomIn" aria-labelledby="2">
+    <ul>
+      <li>
+        <div class="drop-title">You have 3 new messages</div>
+      </li>
+      <li>
+        <div class="message-center">
+          <!--<div  *ngFor="let m of messages">-->
+            <!--&lt;!&ndash; Message &ndash;&gt;-->
+            <!--<a href="#">-->
+              <!--<div class="user-img"> <img src="images/users/5.jpg" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>-->
+              <!--<div class="mail-contnet">-->
+                <!--<h5>{{m.receipient}}</h5>-->
+                <!--<span class="mail-desc">{{m.messages[0].text | slice:0:40}}</span>-->
+                <!--<span class="time">{{m.messages[0].date | date}}</span>-->
+              <!--</div>-->
+            <!--</a>-->
+          <!--</div>-->
+          <!-- this is hardcoded -->
+          <a [routerLink]="[ '/studentmain', { outlets: { content: 'chat' } }]">
+              <div class="user-img"> <img src="images/users/5.jpg" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>
+              <div class="mail-contnet">
+                <h5>Sergio</h5>
+                <span class="mail-desc">Te estas colgando</span>
+                <span class="time"></span>
+              </div>
+            </a>
+          <a href="#">
+              <div class="user-img"> <img src="images/users/5.jpg" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>
+              <div class="mail-contnet">
+                <h5>Julia</h5>
+                <span class="mail-desc">...</span>
+                <span class="time"></span>
+              </div>
+            </a>
+          <a href="#">
+              <div class="user-img"> <img src="images/users/5.jpg" alt="user" class="img-circle"> <span class="profile-status online pull-right"></span> </div>
+              <div class="mail-contnet">
+                <h5>Anfitrion</h5>
+                <span class="mail-desc">Recuerda tu cita el lunes</span>
+                <span class="time"></span>
+              </div>
+            </a>
+          <!-- -->
+        </div>
+      </li>
+      <li>
+        <a class="nav-link text-center" href="javascript:void(0);"> <strong>See all Messages</strong> <i class="fa fa-angle-right"></i> </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
+
+
