--- a/src/css/style.css
+++ b/src/css/style.css
@@ -211,7 +211,7 @@ h6 {
   padding-bottom: 60px;
 }
 .container-fluid {
-  padding: 0 30px 25px;
+  /*padding: 30px 30px 30px;*/
 }
 @media (min-width: 1024px) {
   .page-wrapper {
