--- a/src/app/components/mains/mentormain/mentormain.component.html
+++ b/src/app/components/mains/mentormain/mentormain.component.html
@@ -44,7 +44,7 @@
     <!-- Container fluid  -->
     <div class="container-fluid">
 
-      <!--<app-student-list></app-student-list>-->
+      <app-student-list></app-student-list>
       <router-outlet name="content"></router-outlet>
 
     </div>
