--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -1,8 +1,8 @@
 <!--<mbsc-form>-->
     <!--<div class="mbsc-form-group">-->
         <!--<div class="mbsc-form-group-title"></div>-->
-        <mbsc-eventcalendar display="inline" [labels]="labelDays" [options]="eventSettings"></mbsc-eventcalendar>
+        <mbsc-eventcalendar [data]="labelDays" [options]="eventSettings"></mbsc-eventcalendar>
     <!--</div>-->
 <!--</mbsc-form>-->
-<button mat-fab>+</button>
+<app-task-form></app-task-form>
 
