--- a/src/app/components/goal-form/goal-form.component.css
+++ b/src/app/components/goal-form/goal-form.component.css
@@ -2,17 +2,18 @@
   font-weight: bold;
   color: black;
   text-align: right;
-  margin-right: 70%;
-  padding-top: 15px;
-  white-space: nowrap;
+  /*margin-right: 5%;*/
+  /*width: 95%;*/
+  /*padding-top: 15px;*/
+  /*white-space: nowrap;*/
 }
 
 .input {
   /*outline-offset: 50%;*/
-  margin-left: 40%;
-  width: 40%;
-  white-space: nowrap;
-  padding-bottom: 15px;
+  /*margin-left: 5%;*/
+  /*width: 95%;*/
+  /*white-space: nowrap;*/
+  /*padding-bottom: 15px;*/
 }
 
 mat-card {
@@ -22,6 +23,6 @@ mat-card {
 }
 
 .step-container {
-  /*padding-top: 15px;*/
-  /*padding-bottom: 15px;*/
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
