--- a/src/app/components/mains/studentmain/studentmain.component.html
+++ b/src/app/components/mains/studentmain/studentmain.component.html
@@ -12,6 +12,7 @@
                 <ul aria-expanded="false" class="collapse">
                   <li><a [routerLink]="[ '/studentmain', { outlets: { content: 'dashboard' } }]">Dashboard</a></li>
                   <li><a [routerLink]="[ '/studentmain', { outlets: { content: 'mentors' } }]">Mentoria</a></li>
+                  <li><a [routerLink]="[ '/studentmain', { outlets: { content: 'goal-form'} }]">Goals</a></li>
                 </ul>
               </li>
               <li class="nav-label">Courses</li>
