--- a/src/app/components/daily-schedule/daily-schedule.component.html
+++ b/src/app/components/daily-schedule/daily-schedule.component.html
@@ -1,2 +1,2 @@
-<mbsc-eventcalendar [data]="events" [options]="eventSettings"></mbsc-eventcalendar>
-<button mat-fab (click)="openForm()">+</button>
+<mbsc-eventcalendar [data]="events" [options]="eventSettings" #mbscList="mobiscroll"></mbsc-eventcalendar>
+<app-task-form></app-task-form>
