--- a/src/app/components/mains/mentormain/mentormain.component.html
+++ b/src/app/components/mains/mentormain/mentormain.component.html
@@ -7,28 +7,31 @@
       <nav class="sidebar-nav">
           <ul id="sidebarnav">
               <li class="nav-devider"></li>
-              <li class="nav-label">Home</li>
-              <li class="nav-item"> <a class="has-arrow  " [routerLink]="[ '/main', { outlets: { content: 'dashboard' } }]"
-                                       aria-expanded="false"><i class="fa fa-tachometer"></i><span class="hide-menu">Dashboard</span></a>
-              </li>
-              <!--<li class="nav-label">Courses</li>-->
-              <!--<li> <a class="has-arrow  " href="#" aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Courses</span></a>-->
+            <li><a [routerLink]="[ '/mentormain', { outlets: { content: 'home' } }]">Dashboard</a></li>
+            <li><a [routerLink]="[ '/mentormain', { outlets: { content: 'student-list' } }]">Students List</a></li>
+            <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'today' } }]">Today</a></li>-->
+              <!--<li class="nav-label">Home</li>-->
+              <!--<li class="nav-item"> <a class="has-arrow  " [routerLink]="[ '/main', { outlets: { content: 'dashboard' } }]"-->
+                                       <!--aria-expanded="false"><i class="fa fa-tachometer"></i><span class="hide-menu">Dashboard</span></a>-->
+              <!--</li>-->
+              <!--&lt;!&ndash;<li class="nav-label">Courses</li>&ndash;&gt;-->
+              <!--&lt;!&ndash;<li> <a class="has-arrow  " href="#" aria-expanded="false"><i class="fa fa-columns"></i><span class="hide-menu">Courses</span></a>&ndash;&gt;-->
+                  <!--&lt;!&ndash;<ul aria-expanded="false" class="collapse">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<div *ngFor="let c of courses">&ndash;&gt;-->
+                      <!--&lt;!&ndash;<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.codification }" >{{c.course_name}}</a></li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                  <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+              <!--&lt;!&ndash;</li>&ndash;&gt;-->
+              <!--<li class="nav-label">Schedule</li>-->
+              <!--<li> <a class="has-arrow  " href aria-expanded="false"><i class="fa fa-envelope"></i><span class="hide-menu">Schedule</span></a>-->
                   <!--<ul aria-expanded="false" class="collapse">-->
-                    <!--<div *ngFor="let c of courses">-->
-                      <!--<li><a [routerLink]="[ '/studentmain', { outlets: { content: 'course' } }]" [queryParams]="{ course: c.codification }" >{{c.course_name}}</a></li>-->
-                    <!--</div>-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'today' } }]">Today</a></li>-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'today' } }]">Tomorrow</a></li>-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'this-week' } }]">This Week</a></li>-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'this-week' } }]">Next Week</a></li>-->
+                      <!--<li><a [routerLink]="[ '/main', { outlets: { content: 'calendar' } }]">Calendar</a></li>-->
                   <!--</ul>-->
               <!--</li>-->
-              <li class="nav-label">Schedule</li>
-              <li> <a class="has-arrow  " href aria-expanded="false"><i class="fa fa-envelope"></i><span class="hide-menu">Schedule</span></a>
-                  <ul aria-expanded="false" class="collapse">
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'today' } }]">Today</a></li>
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'today' } }]">Tomorrow</a></li>
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'this-week' } }]">This Week</a></li>
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'this-week' } }]">Next Week</a></li>
-                      <li><a [routerLink]="[ '/main', { outlets: { content: 'calendar' } }]">Calendar</a></li>
-                  </ul>
-              </li>
           </ul>
 
       </nav>
@@ -44,7 +47,6 @@
     <!-- Container fluid  -->
     <div class="container-fluid">
 
-      <app-student-list></app-student-list>
       <router-outlet name="content"></router-outlet>
 
     </div>
